--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -174,4 +174,22 @@
       width: 95%;
       margin-bottom: 10px;
     }
+
+    .todoListWrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      margin-block-start: 25px;
+  }
+
+    .todos__single {
+      display: flex;
+      border-radius: 5px;
+      padding: 20px;
+      margin-top: 15px;
+      background-image: url(https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg);
+      transition: .2s;
+      margin-right: 33px;
+  }
   }
